--- a/index.css
+++ b/index.css
@@ -81,6 +81,12 @@ h3 {
   margin-top: 30px;
   background-color: #e5e4e2;
 }
+a {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -ms-user-select: none;
+}
 p {
   color: gray;
   -webkit-touch-callout: none;
@@ -101,4 +107,60 @@ img {
   margin-top: 10px;
   height: 180px;
   width: 250px;
+}
+.form a {
+  color: #2566bb;
+  text-decoration: none;
+}
+.form {
+  padding: 40px;
+  max-width: 600px;
+  margin: 40px auto;
+  box-shadow: 0 1px 3px 3px;
+}
+h1 {
+  text-align: center;
+  font-weight: thin;
+  margin: 0 0 40px;
+  font-size: 25px;
+}
+label {
+  transform: translateY(6px);
+  left: 13px;
+  color: rgba(white, 0.5);
+  transition: all 0.25s ease;
+
+  pointer-events: none;
+  font-size: 15px;
+}
+label.active {
+  transform: translateY(50px);
+  left: 2px;
+  font-size: 14px;
+}
+
+label.highlight {
+  color: white;
+}
+input,
+textarea {
+  font-size: 22px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 5px 5px;
+  color: black;
+  transition: border-color 0.25s ease, box-shadow 0.25s ease;
+}
+
+textarea {
+  border: 2px solid white;
+  resize: vertical;
+}
+.forgot {
+  text-align: right;
+}
+.button-block {
+  display: block;
+  width: 100%;
 }
