--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ header a:hover {
 .navbar a {
   float: left;
   display: block;
-
+  color: #2566bb;
   padding: 3px 13px;
   text-decoration: none;
 }
@@ -116,7 +116,7 @@ img {
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
-  box-shadow: 0 1px 3px 3px;
+  box-shadow: 1px 0.5px 1px 0.5px;
 }
 h1 {
   text-align: center;
@@ -129,14 +129,16 @@ label {
   left: 13px;
   color: rgba(white, 0.5);
   transition: all 0.25s ease;
-
   pointer-events: none;
-  font-size: 15px;
+  font-size: 18px;
 }
 label.active {
-  transform: translateY(50px);
   left: 2px;
   font-size: 14px;
+}
+.field-wrap {
+  position: relative;
+  margin-bottom: 30px;
 }
 
 label.highlight {
@@ -163,4 +165,19 @@ textarea {
 .button-block {
   display: block;
   width: 100%;
+}
+.button {
+  border: 0;
+  outline: none;
+  border-radius: 0;
+  padding: 6px;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  background-color: #2566bb;
+  transition: all.5s ease;
+  -webkit-appearance: none;
+}
+.button:hover {
+  background-color: #e5e4e2;
 }
